Add menu mode to standard script.

--- a/discdiag.ini
+++ b/discdiag.ini
@@ -14,6 +14,12 @@ init:
     p "The \"helps\" command gives information on script commands"
     p
 
+    !
+    ! Uncomment this section for menu driven diagnostic
+    !
+    menu
+    exit
+     
 end
 
 !
@@ -29,6 +35,55 @@ helps:
     p "testwrrro count     - Perform random length writes and reads at random"
     p "                      locations and lengths with overwrite test."
     p "accept              - Run all tests in turn."
+    p "menu                - Enter menu driven mode"
+
+end
+
+!
+! Perform menu driven tests
+!
+menu:
+
+    s menuval 0
+    repeat
+
+        p "Disk Diagnostic tests available:"
+        p
+        p "1: testwr span         - Perform linear write and read test."
+        p "2: testwrr span count  - Perform linear write with random read test."
+        p "3: testwrrl span count - Perform linear write with random read and length test."
+        p "4: testwrrr count      - Perform random length writes and reads at random"
+        p "                         locations and lengths test."
+        p "5: testwrrro count     - Perform random length writes and reads at random"
+        p "                         locations and lengths with overwrite test."
+        p "6: accept              - Run all tests in turn."
+        p
+        p "Enter 0 to end diagnostic"
+        p
+        p "Enter selection: "; input menuval
+        p
+        select menuval
+
+            case 1; p "Linear write and read test"
+                    testwr 300000
+
+            case 2: p "Linear write with random read test"
+                    testwrr 300000 300000
+
+            case 3: p "Linear write with random read and length test"
+                    testwrrl 300000 300000
+
+            case 4: p "Random length writes and reads at random locations and lengths test"
+                    testwrrr 300000
+
+            case 5: p "Random length writes and reads at random locations and lengths with overwrite test"
+                    testwrrro 150000
+   
+            default; p "Bad test number"
+
+        send
+
+    until menuval = 0
 
 end
 
