1. Changed menu command spacing.
2. Added no-op case for menu exit (0 command.

--- a/discdiag.ini
+++ b/discdiag.ini
@@ -60,9 +60,11 @@ menu:
         p
         p "Enter 0 to end diagnostic"
         p
-        p "Enter selection: "; input menuval
+        pn "Enter selection: "; input menuval
         p
         select menuval
+
+            case 0 ! exit
 
             case 1; p "Linear write and read test"
                     testwr 300000
