Can't have spaces in expressions.

--- a/discdiag.ini
+++ b/discdiag.ini
@@ -17,6 +17,8 @@ init:
     !
     ! Uncomment this section for menu driven diagnostic
     !
+    drive 1
+    unprot
     menu
     exit
      
@@ -85,7 +87,7 @@ menu:
 
         send
 
-    until menuval = 0
+    until menuval=0
 
 end
 
