Fix up fully automated mode and comment out.

--- a/discdiag.ini
+++ b/discdiag.ini
@@ -17,10 +17,11 @@ init:
     !
     ! Uncomment this section for menu driven diagnostic
     !
-    drive 1
-    unprot
-    menu
-    exit
+    ! exitonerror
+    ! drive 1
+    ! unprot
+    ! menu
+    ! exit
      
 end
 
